--- a/src/app/components/homeComponent/homeComponent.html
+++ b/src/app/components/homeComponent/homeComponent.html
@@ -103,7 +103,7 @@
             <div class="panel-heading text-center">Hot Deals</div>
             <div class="panel-body">
                 <div>
-                    <div id="slideshow" class="carousel slide" data-ride="carousel">
+                    <div id="slideshow" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="item active">
                                 <div class="well row">
@@ -143,13 +143,13 @@
                         </div>
                     </div>
                     <div class="carousel-controls">
-                        <span class="left carousel-control" href="#slideshow" data-slide="prev">
+                        <a class="left carousel-control" href="#slideshow" data-slide="prev">
 								<span class="glyphicon glyphicon-chevron-left"></span>
-							</span>
+						</a>
 
-                        <span class="right carousel-control carousel-back" href="#slideshow" data-slide="next">
+                        <a class="right carousel-control carousel-back" href="#slideshow" data-slide="next">
 								<span class="glyphicon glyphicon-chevron-right"></span>
-							</span>
+						</a>
                     </div>
                 </div>
             </div>
