--- a/src/app/components/postAdComponent/postAdComponent.html
+++ b/src/app/components/postAdComponent/postAdComponent.html
@@ -60,7 +60,7 @@
                     <label class="control-label col-sm-3">Category</label>
                     <div class="col-sm-9">
                         <select name="category" class="form-control" #categoryRef #categoryModelRef="ngModel" required ngModel>
-                        <option *ngFor="let option of options" [value]="option.value">
+                        <option *ngFor="let option of options" [value]="option.name">
                             {{option.name}}
                         </option>
                         </select>
@@ -86,30 +86,24 @@
     </div>
     <p class="text-primary text-center">Details</p>
     <div class="col-md-6">
-
-        <div class="col-md-10">
-            <br><br>
-            <form class="form-horizontal" action="/action_page.php">
-                <div class="form-group">
-                    <label class="control-label col-sm-3" for="email">Name:</label>
-                    <div class="col-sm-9">
-                        <input type="input" class="form-control" id="title" name="title">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-3" for="email">Phone Number:</label>
-                    <div class="col-sm-9">
-                        <input type="number" class="form-control" id="title" name="title" maxlength="10">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-3" for="email">Email Id:</label>
-                    <div class="col-sm-9">
-                        <input type="email" class="form-control" id="title" name="title">
-                    </div>
-                </div>
-            </form>
-            <button type="button" class="btn btn-primary pull-right">Post Ad</button>
-        </div>
+            <table>
+            <tbody>
+                <tr>
+                    <th>Name</th>
+                    <th>Category</th>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Actions</th>
+                </tr>
+                <tr *ngFor="let advertisement of advertisements ">
+                    <td>{{advertisement.name}}</td>
+                    <td>{{advertisement.category}}</td>
+                    <td>{{advertisement.title}}</td>
+                    <td>{{advertisement.description}}</td>
+                    <td><button (click)="deleteObject(advertisement.id)">delete</button>
+                    <button (click)="editObject(advertisement.id)">edit</button></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
